--- a/.gitignore
+++ b/.gitignore
@@ -105,12 +105,10 @@ jupiter_client/src/main/java/com/joyintech/jupiter/client/BondDto.java
 jupiter_client/src/main/java/com/joyintech/jupiter/client/Test.java
 
 
-# For Eclipse and vscode
-.project
-org.eclipse*
+# For vscode
 .classpath
+.project
+bin/
+out/
+.settings
 .vscode
-.factorypath
-
-.scannerwork
-*.http
